# Neighborhood-Library-Service

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  start.sh
backend/: .env.example  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  schema.sql
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_tables.py  0002_users_role.py  0003_user_password_hash.py  0004_book_subject_rack.py  0005_library_policy.py  0006_audit_logs.py  0007_created_updated_by.py  0008_fine_payments.py  0009_loans_import_idempotency.py  0010_audit_change_diff.py
backend/app/: config.py  db.py  deps.py  main.py
backend/app/crud/: audit.py  auth.py  base.py  books.py  fine_payments.py  loans.py  policies.py  users.py
backend/app/models/: __init__.py  audit_log.py  book.py  fine_payment.py  loan.py  policy.py  user.py
backend/app/routers/: __init__.py  audit.py  auth.py  books.py  crud.py  fine_payments.py  imports.py  loans.py  policies.py  seed.py  users.py
backend/app/schemas/: audit.py  auth.py  books.py  fine_payments.py  loans.py  policy.py  users.py
backend/app/utils/: api_cache.py  audit_fields.py  (+5 more)
backend/tests/: conftest.py  constants.py  test_audit_logs.py  test_auth.py  test_books.py  test_context_and_audit_fields.py  test_crud_base.py  test_crud_loans_direct.py  test_fine_payments.py  test_imports.py  test_loans.py  test_loans_edges.py  test_member_loans.py  test_policy_and_staff_permissions.py  test_router_error_paths.py  test_security_deps_db_main.py  test_users.py  test_users_permissions_and_seed.py
(+46 files in other folders)
