[project]
name = "neighborhood-library-backend"
version = "0.1.0"
description = "Neighborhood Library Service backend API"
requires-python = ">=3.10,<3.12"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "SQLAlchemy==2.0.31",
  "asyncpg==0.29.0",
  "alembic==1.13.2",
  "pydantic==2.7.4",
  "pydantic-settings==2.3.4",
  "python-dotenv==1.0.1",
  "aiosqlite==0.20.0",
  "httpx==0.27.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "openpyxl==3.1.5",
  "python-multipart==0.0.9",
]

[dependency-groups]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.8",
  "pytest-cov==5.0.0",
]
